Fix Alignment of Headings

--- a/static/resources/css/releases.css
+++ b/static/resources/css/releases.css
@@ -2,7 +2,6 @@
 /* Basic Styling */
 h1, h2, h3, h4 {
     margin-top: 0;
-    text-align: center;
     margin-bottom: 1px;
 }
 
@@ -70,6 +69,10 @@ nav {
 .logo {
     margin-top: 30px;
     float: left;
+}
+
+.published-at, .release-name {
+    text-align: center;
 }
 
 /* Others */
